src/objects/MT_RankingPosition__c.object
<CustomObject>
    <description>Stellt die Position einer Kampagne in einem Ranking dar.</description>
    <fields>
        <fullName>MT_BookingCluster__c</fullName>
        <description>Die Einordnung der Kampagne zu einem Buchungsvorlauf.</description>
        <label>Booking Cluster</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaign_ref__c</fullName>
        <description>Die Kampagne, die im Ranking positioniert wird.</description>
        <label>Media Campaign</label>
        <referenceTo>MT_MediaCampaign__c</referenceTo>
        <relationshipLabel>Ranking Positions</relationshipLabel>
        <relationshipName>Ranking_Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>MT_Position__c</fullName>
        <description>Die Position innerhalb das Rankings (aufsteigende Nummer über alle Buchungsvorläufe hinweg).</description>
        <label>Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_RankingVersion_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Das Ranking, in dem diese Position gilt.</description>
        <label>Ranking Version</label>
        <referenceTo>MT_RankingVersion__c</referenceTo>
        <relationshipLabel>Ranking Positions</relationshipLabel>
        <relationshipName>Ranking_Positions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Ranking Position</label>
    <nameField>
        <displayFormat>MRP-{000000}</displayFormat>
        <label>Ranking Position Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ranking Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>